# satisfactory-gurobi

./: .gitignore  README.md  pyproject.toml
src/satisfactory_gurobi/: main.py  nonsequential.py  parse_game_file.py  sushi_logic.py  sushi_lp_unsequenced.py
