[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "satisfactory-gurobi"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "gurobipy",
    "numpy",
    "scipy",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["src"]
